Credit icons, remove old summary box, cap match percent at 100

--- a/geoContrast.html
+++ b/geoContrast.html
@@ -292,60 +292,9 @@
 						</div>
 					
 					</div>
-
-					<div id="source-summary" class="row box" style="display:none; width:100%; margin:0px 0px">
-						<div id="source-summary-banner" style="display:flex; flex-direction:column; width:100%; align-items:center;">
-							<div style="display:flex; flex-direction:row; align-items:center; width:80%; justify-content:space-evenly;">
-								<div style="display:flex; flex-direction:row; align-items:center">
-									<div style="width:10px; height:10px; background-color:#31add3; margin:10px"></div>
-									<h2 style="margin-bottom: 4px;">
-										<span class="gb-source-title" style="font-style:normal">-</span> 
-									</h2>
-								</div>
-								<div style="display:flex; flex-direction:row; align-items:center">
-									<div style="width:10px; height:10px; background-color:rgb(255,0,0); margin:10px"></div>
-									<h2 style="margin-bottom: 4px;">
-										<span class="comp-source-title" style="font-style:normal">-</span>
-									</h2>
-								</div>
-							</div>
-						</div>
-						<div id="source-summary-links" style="display:none; flex-direction:row; align-items:center; width:100%; justify-content:space-evenly; font-weight:bold">
-							<a href="#source-overview">Metadata</a>
-							<a href="#source-stats">Boundary Stats</a>
-							<a href="#source-contents">Boundary Agreement</a>
-						</div>
-						<div id="source-summary-div" style="width:98%; display:flex; flex-direction:row; flex-wrap:wrap; justify-content:space-evenly">
-							<div class="summarystat">
-								<img style="padding:5px" src="https://cdn-icons-png.flaticon.com/512/1017/1017397.png"/>
-								<h2 id="summary-level">ADM1</h2>
-								<span>Admin level</span>
-							</div>
-							<div class="summarystat">
-								<img src="https://cdn3.iconfinder.com/data/icons/google-material-design-icons/48/ic_history_48px-512.png"/>
-								<h2 id="summary-year">2009</h2>
-								<span>Boundary Year</span>
-							</div>
-							<div class="summarystat">
-								<img style="padding:2px" src="images/count.png" title="Count icon created by Sicon - Flaticon: https://www.flaticon.com/premium-icon/count_2440951"/>
-								<h2 id="summary-boundarycount">12</h2>
-								<span>Admin count</span>
-							</div>
-							<div class="summarystat">
-								<img style="padding:5px" src="https://d338t8kmirgyke.cloudfront.net/icons/icon_pngs/000/000/357/original/linegraph.png"/>
-								<h2 id="summary-lineres">559m</h2>
-								<span>Line Resolution</span>
-							</div>
-							<div class="summarystat">
-								<img src="https://icon-library.com/images/comparison-icon/comparison-icon-18.jpg"/>
-								<h2 id="summary-similarity">-</h2>
-								<span>Similarity</span>
-							</div>
-						</div>
-					</div>
 					
 					<div id="source-overview-banner" class="section-banner">
-						<img src="images/info.png">
+						<img src="images/info.png" title="Icon created by Freepik from www.flaticons.com">
 						<h2>Metadata</h2>
 					</div>
 
@@ -372,7 +321,7 @@
 								<tbody>
 									<tr>
 										<td class="stats-label">
-											<img src="images/google-docs.png"/>
+											<img src="images/google-docs.png" title="Icon created by Freepik from www.flaticons.com"/>
 											Source: (<span class="tooltip" data-text="Shown in order of most recent source first (e.g. starting with the dataset curator or publisher, ending with the original data source).">?</span>)
 										</td>
 										<td><div id="stats-gb-source" class="stats-value"></div></td>
@@ -380,7 +329,7 @@
 									</tr>
 									<tr>
 										<td class="stats-label">
-											<img src="images/hand-shake.png"/>
+											<img src="images/hand-shake.png" title="Icon created by Pixel perfect from www.flaticons.com"/>
 											License:
 										</td>
 										<td><div id="stats-gb-license" class="stats-value"></div></td>
@@ -388,7 +337,7 @@
 									</tr>
 									<tr>
 										<td class="stats-label">
-											<img style="padding:2px" src="images/hierarchy-structure.png"/>
+											<img style="padding:2px" src="images/hierarchy-structure.png" title="Icon created by Freepik from www.flaticons.com"/>
 											Level:
 										</td>
 										<td id="stats-gb-level" class="stats-value"></td>
@@ -396,7 +345,7 @@
 									</tr>
 									<tr>
 										<td class="stats-label">
-											<img src="images/history.png"/>
+											<img src="images/history.png" title="Icon created by Google from www.flaticons.com"/>
 											Year the Boundary Represents:
 										</td>
 										<td id="stats-gb-year" class="stats-value"></td>
@@ -404,7 +353,7 @@
 									</tr>
 									<tr>
 										<td class="stats-label">
-											<img style="padding:2px" src="images/calendar.png"/>
+											<img style="padding:2px" src="images/calendar.png" title="Icon created by Freepik from www.flaticons.com"/>
 											Last Update:
 										</td>
 										<td id="stats-gb-updated" class="stats-value"></td>
@@ -418,7 +367,7 @@
 					<br>
 
 					<div id="source-stats-banner" class="section-banner">
-						<img src="images/graph.png">
+						<img src="images/graph.png" title="Icon created by Bamicon from www.flaticons.com">
 						<h2>Boundary Stats</h2>
 					</div>
 
@@ -445,7 +394,7 @@
 								<tbody>
 									<tr>
 										<td class="stats-label">
-											<img src="images/count.png" title="Count icon created by Sicon - Flaticon: https://www.flaticon.com/premium-icon/count_2440951"/>
+											<img src="images/count.png" title="Icon created by Sicon from www.flaticon.com"/>
 											Administrative Units:
 										</td>
 										<td id="stats-gb-admincount" class="stats-value"></td>
@@ -453,7 +402,7 @@
 									</tr>
 									<tr>
 										<td class="stats-label">
-											<img style="padding:3px" src="images/square.png">
+											<img style="padding:3px" src="images/square.png" title="Icon created by Freepik from www.flaticons.com">
 											Area:
 										</td>
 										<td id="stats-gb-area" class="stats-value"></td>
@@ -461,7 +410,7 @@
 									</tr>
 									<tr>
 										<td class="stats-label">
-											<img style="padding:3px" src="images/selection-square.png">
+											<img style="padding:3px" src="images/selection-square.png" title="Icon created by Freepik from www.flaticons.com">
 											Perimeter (<span class="tooltip" data-text="The total length of borders across all boundary units.">?</span>):
 										</td>
 										<td id="stats-gb-circumf" class="stats-value"></td>
@@ -469,15 +418,16 @@
 									</tr>
 									<tr>
 										<td class="stats-label">
-											<img style="padding:5px" src="images/stats.png"/>
+											<img style="padding:5px" src="images/stats.png" title="Icon created by Freepik from www.flaticons.com"/>
 											Vertices (<span class="tooltip" data-text="The total number of line vertices across all boundary units.">?</span>):
 										</td>
 										<td id="stats-gb-vertices" class="stats-value"></td>
 										<td id="stats-comp-vertices" class="stats-value"></td>
 									</tr>
 									<tr style="display:none">
+										<!--Not shown-->
 										<td class="stats-label">
-											<img style="padding:5px" src="images/stats.png"/>
+											<img style="padding:5px" src="images/stats.png" title="Icon created by Freepik from www.flaticons.com"/>
 											Vertex Density (<span class="tooltip" data-text="The average number of vertices for every km of line distance. Calculated as the total number of vertices of all boundary units divided by the total perimeter.">?</span>):
 										</td>
 										<td id="stats-gb-avglinedens" class="stats-value"></td>
@@ -485,7 +435,7 @@
 									</tr>
 									<tr>
 										<td class="stats-label">
-											<img style="padding:5px" src="images/shape.png"/>
+											<img style="padding:5px" src="images/shape.png"  title="Icon created by Pixelmeetup from www.flaticons.com"/>
 											Line Resolution (<span class="tooltip" data-text="The average resolution or distance between line vertices. Calculated as the total perimeter of all boundary units divided by the total number of vertices.">?</span>):
 										</td>
 										<td id="stats-gb-avglineres" class="stats-value"></td>
@@ -499,7 +449,7 @@
 					<br>
 
 					<div id="source-contents-banner" class="section-banner">
-						<img src="images/overlap.png">
+						<img src="images/overlap.png" title="Icon created by Kiranshastry from www.flaticons.com">
 						<h2>Boundary Agreement</h2>
 					</div>
 
