Move main geocontrast page js files to its own folder

--- a/gbContribute.html
+++ b/gbContribute.html
@@ -366,7 +366,7 @@
 	<script src="assets/js/internalHelpers.js"></script>
 	<script src="assets/js/internalData.js"></script>
 	<script src="assets/js/internalSpatial.js"></script>
-    <script src="assets/js/gbContribute.js"></script>
+    <script src="assets/js/gbContribute/gbContribute.js"></script>
 
 </body>
 
