Remove old shp2geojson dependency

--- a/gbContribute.html
+++ b/gbContribute.html
@@ -335,15 +335,13 @@
 	<script src="assets/js/papaparse.min.js"></script>
 
 
-	<!--this is for shp2geojson-->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.3/proj4.js"></script>
-	<script src="assets/js/shp2geojson/lib/jszip.js"></script>
-	<script src="assets/js/shp2geojson/lib/jszip-utils.js"></script>
-	<script type="text/javascript" src="assets/js/shp2geojson/lib/jszip-utils-ie.js"></script>
-	<script src="assets/js/shp2geojson/preprocess.js"></script>
-	<script src="assets/js/shp2geojson/preview.js"></script>
+	<!--this is for jszip-->
+	<script src="assets/js/jszip/jszip.js"></script>
+	<script src="assets/js/jszip/jszip-utils.js"></script>
+	<script type="text/javascript" src="assets/js/jszip/jszip-utils-ie.js"></script>
 
-    <!-- alternatively use shapefile-js -->
+    <!-- this is for shapefile-js -->
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.3/proj4.js"></script>-->
 	<script src="https://unpkg.com/shpjs@latest/dist/shp.js"></script>
 
 	<!--this is for dynamic boundary stats-->
@@ -351,8 +349,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Turf.js/6.5.0/turf.min.js" integrity="sha512-Q7HOppxoH0L2M7hreVoFCtUZimR2YaY0fBewIYzkCgmNtgOOZ5IgMNYxHgfps0qrO1ef5m7L1FeHrhXlq1I9HA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 	<!--this is for printing pdf reports-->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/print-js/1.6.0/print.js" integrity="sha512-/fgTphwXa3lqAhN+I8gG8AvuaTErm1YxpUjbdCvwfTMyv8UZnFyId7ft5736xQ6CyQN4Nzr21lBuWWA9RTCXCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>
+	<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/print-js/1.6.0/print.js" integrity="sha512-/fgTphwXa3lqAhN+I8gG8AvuaTErm1YxpUjbdCvwfTMyv8UZnFyId7ft5736xQ6CyQN4Nzr21lBuWWA9RTCXCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>-->
+	<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>-->
 	<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.1/html2canvas.min.js" integrity="sha512-Ki6BxhTDkeY2+bERO2RGKOGh6zvje2DxN3zPsNg4XhJGhkXiVXxIi1rkHUeZgZrf+5voBQJErceuCHtCCMuqTw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>-->
 	<script src="assets/js/html2canvas.js"></script> <!--this local file includes a patch for image object-fit from https://github.com/niklasvh/html2canvas/issues/2541-->
 
