--- a/geoContrast.html
+++ b/geoContrast.html
@@ -708,15 +708,13 @@
 	<script src="assets/js/papaparse.min.js"></script>
 
 
-	<!--this is for shp2geojson-->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.3/proj4.js"></script>
-	<script src="assets/js/shp2geojson/lib/jszip.js"></script>
-	<script src="assets/js/shp2geojson/lib/jszip-utils.js"></script>
-	<script type="text/javascript" src="assets/js/shp2geojson/lib/jszip-utils-ie.js"></script>
-	<script src="assets/js/shp2geojson/preprocess.js"></script>
-	<script src="assets/js/shp2geojson/preview.js"></script>
+	<!--this is for jszip-->
+	<script src="assets/js/jszip/jszip.js"></script>
+	<script src="assets/js/jszip/jszip-utils.js"></script>
+	<script type="text/javascript" src="assets/js/jszip/jszip-utils-ie.js"></script>
 
-	<!-- alternatively use shapefile-js -->
+	<!-- this is for shapefile-js -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.3/proj4.js"></script>
 	<script src="https://unpkg.com/shpjs@latest/dist/shp.js"></script>
 
 	<!--this is for dynamic boundary stats-->
