--- a/geoContrast.html
+++ b/geoContrast.html
@@ -119,7 +119,7 @@
 									<ul class='etabs'>
 										<li class='tab'><a href="geoContrastCountries.html">Global Boundaries</a></li>
 										<li class='tab active'><a href="geoContrast.html">Country Boundaries</a></li>
-										<!--<li class='tab'><a href="geoData.html">Country Data</a></li>-->
+										<li class='tab'><a href="geoData.html">Country Data</a></li>
 									</ul>
 
 									<div id="compare" class="box" style="font-size:14pt; height:575px">
