--- a/geoContrastCountries.html
+++ b/geoContrastCountries.html
@@ -92,7 +92,7 @@
 									<ul class='etabs'>
 										<li class='tab active'><a href="geoContrastCountries.html">Global Boundaries</a></li>
 										<li class='tab'><a href="geoContrast.html">Country Boundaries</a></li>
-										<!--<li class='tab'><a href="geoData.html">Country Data</a></li>-->
+										<li class='tab'><a href="geoData.html">Country Data</a></li>
 									</ul>
 									
 									<div id="countries" class="box" style="font-size:14pt; height:575px">
