Make csv be downloaded as file
Previously was only viewed as plain text in browser

--- a/geoData.html
+++ b/geoData.html
@@ -110,7 +110,7 @@
  
 									    </div>
 
-				 					    <button type="button" style="font-size:0.6em" onclick="goto_raw_csv_file()">Download Raw Data</button>
+										<a id="csv_download" class="button" href="" style="font-size:0.6em" target="_blank">Download Raw Data</a>
 
 									    
 										<p style="font-size:10px;"  id="metadata-text"></p>
