Remind user of dataset/indicator name above the table
As a reminder of what "value" refers to

--- a/geoData.html
+++ b/geoData.html
@@ -152,17 +152,15 @@
 					<div id="countries-overview" class="row box" style="width:100%; margin:15px 0px">
 						<div id="countries-overview-banner" style="width:100%; text-align:center">
 							<h2 style="margin-bottom:5px">Countries</h2>
+							<h5 id="countries-table-title"></h5>
 						</div>
 						<div style="width:100%">
 						  <table id="countries-table" style="margin-left:10px">
-						    <p>Select a csv to show data</p>
                                 <thead>
                                 </thead>
                                 <tbody>
                                 </tbody>
                             </table>
-
-			  
 						</div>
 					</div>
 
