Proper table rendering by placing data inside tbody

--- a/geoData.html
+++ b/geoData.html
@@ -157,6 +157,10 @@
 						<div style="width:100%">
 						  <table id="countries-table" style="margin-left:10px">
                                 <thead>
+									<tr>
+										<th>Country</th>
+										<th>Value</th>
+									</tr>
                                 </thead>
                                 <tbody>
                                 </tbody>
