Move geoData.js into geoData folder
This way all pages follow the same convention of being self contained in their own folders

--- a/geoData.html
+++ b/geoData.html
@@ -48,7 +48,7 @@
 </head>
 
 
-<script src="assets/js/geoData.js"></script>
+<script src="assets/js/geoData/geoData.js"></script>
 
 
 <body class="is-preload">
@@ -302,8 +302,8 @@
 	<script src="assets/js/internalData.js"></script>
 	<script src="assets/js/internalSpatial.js"></script>
     <script src="assets/data/gb-countries-simple.js"></script>
-    <script src="assets/js/geoData/geoData_Map.js"></script>
-    <script src="assets/js/geoData/geoData_Country.js"></script>
+    <script src="assets/js/geoData/Map.js"></script>
+    <script src="assets/js/geoData/Country.js"></script>
 
 	<script>
 		read_geodata_data(); 
