Fix country table overflow

--- a/geoContrastCountries.html
+++ b/geoContrastCountries.html
@@ -152,7 +152,7 @@
 						<div id="countries-overview-banner" style="width:100%; text-align:center">
 							<h2 style="margin-bottom:5px">Countries</h2>
 						</div>
-						<div style="width:100%">
+						<div style="width:100%; overflow:auto">
                             <table id="countries-table" style="margin-left:10px">
                                 <thead>
                                 </thead>
