--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 							ajaxURL: "https://www.geoboundaries.org/api/index.json", //ajax URL
 						        height: screen.height * 0.60,
 							layout: "fitColumns",
-							autoResize:true,
+							autoResize:false,
 							resizableColumns: true,
 							responsiveLayout: "collapse",
 							groupBy: ["Continent", "boundaryName"],
@@ -298,18 +298,8 @@
 									],
 								}
 
-								//{ formatter: downloadSingleIcon, title: "", align: "center", responsive: 0, cellClick: function (e, cell) { window.open(encodeURI(cell.getRow().getData()["downloadURL"].replace("https://g", "https://www.g"))) } },
-								//
-								//{ title: "ISO3", field: "boundaryISO", visible: true, responsive: 0, headerFilter: "input" },
-								//{ title: "Level", field: "boundaryType", visible: true, responsive: 0, headerFilter: "select" },
-								//{ title: "License", field: "boundaryLicense", headerFilter: "select", headerFilterParams: { values: true }, visible: true, formatter: "textarea", width: "37%"},
-								//{title:"ID", field:"boundaryID", visible:true},
-								//{ title: "Source", field: "boundarySource-1", visible: true, formatter: "textarea", width: "37%" },
-								//{ title: "ShapefileURL", field: "downloadURL", visible: false },
 							]
 						});
-
-					  tableA.redraw(true);
 
 					</script>
 
